--- a/assets-20250528T132244Z-1-001/index.html
+++ b/assets-20250528T132244Z-1-001/index.html
@@ -19,13 +19,13 @@
 </head>
 
 <body>
-    <header>
-        <!-- topbar -->
-        <div class="top-bar bg-dark p-2">
+    <!-- topbar -->
+    <header style="position: absolute;  width: 100%; z-index: 10; top: 0; left: 0;">
+        <div class="top-bar bg-transperent p-2 text-white">
             <div class="container">
                 <div class="row justify-content-between">
                     <div class="col-7">
-                        <ul class="d-flex m-0 p-0 gap-3">
+                        <ul class="d-flex m-0 p-0 gap-3 flex-wrap">
                             <li>
                                 <a href="https://g.co/kgs/rFpZgaN" class="text-white"><i
                                         class="bi bi-geo-alt-fill"></i>742 Evergreen Terrace Brooklyn, NY 11201</a>
@@ -40,8 +40,8 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="col-2">
-                        <ul class="d-flex m-0 gap-4">
+                    <div class="col-4 text-end">
+                        <ul class="d-flex m-0 gap-4 justify-content-end ">
                             <li><a href="#" class="text-white"> <i class="bi bi-facebook"></i> </a></li>
                             <li><a href="#" class="text-white"> <i class="bi bi-instagram"></i> </a></li>
                             <li><a href="#" class="text-white"> <i class="bi bi-twitter-x"></i> </a></li>
@@ -53,109 +53,119 @@
             </div>
         </div>
         <!-- navbar -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: transparent;">
             <div class="container">
-                
-                <div class="logo ">
-                    <a class=" nav-logo navbar-brand " href="http://127.0.0.1:5500/index.html ">
-                        <img src="./assets/images/main logo/logo-white.webp" alt="logo" class="img-fluid">
+                <div class="logo">
+                    <a class=" navbar-brand" href="http://127.0.0.1:5500/index.html ">
+                        <img src="./assets/images/main logo/logo-white.webp" alt="logo" style="height: 37px;">
                     </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item dropdown p-3">
-                            <a class="nav-link dropdown-toggle text-white fs-5" role="button" data-bs-toggle="dropdown"
-                                data-bs-toggle="dropdown" href="#">Home</a>
+                            <a class="nav-link  text-white" role="button" data-bs-toggle="dropdown"
+                                data-bs-toggle="dropdown" href="#" style="font-size: 16px;">Home
+                            <i class="bi bi-caret-down-fill fs-6"></i>
+                            </a>
                             <ul class="dropdown-menu m-0 border-0 shadow " style="width:230px;">
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">Main
+                                <li><a class="dropdown-item e-10" href="http://127.0.0.1:5500/index.html#">Main
                                         Demo</a></li>
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">Beach
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Beach
                                         Resort2</a></li>
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">Lake
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Lake
                                         Side</a></li>
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">Golf
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Golf
                                         Resort</a></li>
-                                <li><a class="dropdown-item fs-5 e-10"
-                                        href="http://127.0.0.1:5500/index.html#">Holiday</a></li>
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Holiday</a>
+                                </li>
 
                             </ul>
                         </li>
-                        <li class="nav-item dropdown p-3">
-                            <a class="nav-link dropdown-toggle text-white fs-5" href="#" role="button"
-                                data-bs-toggle="dropdown">Rooms</a>
+                        <li class="nav-item dropdown p-3 ">
+                            <a class="nav-link  text-white " href="#" role="button"
+                                data-bs-toggle="dropdown">Rooms
+                             <i class="bi bi-caret-down-fill fs-6"></i></a>
                             <ul class="dropdown-menu m-0 border-0 shadow " style="width:230px;">
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">Delux
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Delux
                                         Room</a></li>
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">Family
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Family
                                         Suite</a></li>
-                                <li><a class="dropdown-item fs-5 e-10"
-                                        href="http://127.0.0.1:5500/index.html#">Presidential Suite</a></li>
+                                <li><a class="dropdown-item e-10" href="http://127.0.0.1:5500/index.html#">Presidential
+                                        Suite</a></li>
 
 
                             </ul>
                         </li>
                         <li class="nav-item dropdown p-3 active">
-                            <a class="nav-link dropdown-toggle text-white fs-5" href="#" role="button"
+                            <a class="nav-link  text-white" href="#" role="button"
                                 data-bs-toggle="dropdown">
                                 Pages
+                                 <i class="bi bi-caret-down-fill fs-6"></i>
                             </a>
-                            <ul class="dropdown-menu m-0 border-0 shadow" style="width:230px;">
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">About
+                            <ul class="dropdown-menu m-0 border-0 shadow " style="width:230px;">
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">About
                                         Us</a></li>
-                                <li><a class="dropdown-item fs-5 e-10"
+                                <li><a class="dropdown-item  e-10"
                                         href="http://127.0.0.1:5500/index.html#">Facilities</a></li>
-                                <li><a class="dropdown-item fs-5 e-10"
-                                        href="http://127.0.0.1:5500/index.html#">Offer</a></li>
-                                <li><a class="dropdown-item fs-5 e-10"
-                                        href="http://127.0.0.1:5500/index.html#">Gallery</a></li>
-                                <li><a class="dropdown-item fs-5 e-10" href="http://127.0.0.1:5500/index.html#">Gallery
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Offer</a>
+                                </li>
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Gallery</a>
+                                </li>
+                                <li><a class="dropdown-item  e-10" href="http://127.0.0.1:5500/index.html#">Gallery
                                         Carousel</a></li>
 
                             </ul>
                         </li>
                         <li class="nav-item p-3">
-                            <a class="nav-link disabled text-white fs-5"
-                                href="http://127.0.0.1:5500/index.html#">News</a>
+                            <a class="nav-link text-white" href="https://themewant.com/products/wordpress/almaris/news/">News</a>
                         </li>
                         <li class="nav-item p-3">
-                            <a href="http://127.0.0.1:5500/index.html#" class="nav-link text-white fs-5">Contact</a>
+                            <a href="https://themewant.com/products/wordpress/almaris/contact/" class="nav-link text-white ">Contact</a>
                         </li>
                     </ul>
                 </div>
-                <button class="btn btn-outline-primary text-white rounded-0 " type="submit">RESERVATION</button>
+                <button class="btn btn-outline-primary text-white rounded-0 thin-border" type="submit">RESERVATION</button>
 
             </div>
             </div>
 
             </div>
         </nav>
-        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active" data-bs-interval="12000">
-                                <img src="./assets/images/banner img/img1.webp" class="d-block w-100" alt="img1">
-                            </div>
-                            <div class="carousel-item" data-bs-interval="2000">
-                                <img src="./assets/images/banner img/img2.webp" class="d-block w-100" alt="img2">
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
-                    </div>
+
     </header>
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel"
+        style="height: 100vh; overflow: hidden;">
+        <div class="carousel-inner h-100">
+            <div class="carousel-item active h-100" data-bs-interval="5000" style="position: relative;">
+                <img src="./assets/images/banner img/img1.webp" class="d-block w-100 h-100" style="object-fit: cover;"
+                    alt="img1">
+                <div class="dark-overlay"></div>
+            </div>
+            <div class="carousel-item  h-100" data-bs-interval="5000">
+                <img src="./assets/images/banner img/img2.webp" class="d-block w-100 h-100" style="object-fit: cover;"
+                    alt="img2">
+                <div class="dark-overlay"></div>
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+            data-bs-slide="prev">
+           <i class="bi bi-caret-left-fill" style="color:  #AB8965; font-size: 45px;"></i>
+            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span> -->
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+            data-bs-slide="next">
+            <i class="bi bi-caret-right-fill" style="color: #AB8965; font-size: 45px;"></i>
+            <!-- <span class="carousel-control-next-icon" aria-hidden="true" ></span> -->
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
     <main>
         <section>
             <div class="container">
                 <div class="row">
-                    
+
                 </div>
             </div>
         </section>
